# python_embed

./: .includes.in  .travis.yml  Makefile.am  README.md  README.rst  clean.sh  command.sh  configure.ac  example1.c  example1.cpp  example2.c  example2.cpp  example3.c  example3.cpp  example4.c  hellomodule.c  multiply.py  pythonconfig.py  run.sh  setup.py  try.sh
