ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = example1
example1_SOURCES = example1.c
example1_CFLAGS = $(PYTHON_CFLAGS)
example1_LDADD = $(PYTHON_LDFLAGS)

bin_PROGRAMS += example2
example2_SOURCES = example2.c
example2_CFLAGS = $(PYTHON_CFLAGS)
example2_LDADD = $(PYTHON_LDFLAGS)

bin_PROGRAMS += example3
example3_SOURCES = example3.c
example3_CFLAGS = $(PYTHON_CFLAGS)
example3_LDADD = $(PYTHON_LDFLAGS)

bin_PROGRAMS += example4
example4_SOURCES = example4.c
example4_CFLAGS = $(PYTHON_CFLAGS)
example4_LDADD = $(PYTHON_LDFLAGS)
