bin_PROGRAMS = example1
example1_SOURCES = example1.cpp
example1_CPPFLAGS = $(PYTHON_CFLAGS)
example1_LDADD = $(PYTHON_LDFLAGS)

bin_PROGRAMS += example2
example2_SOURCES = example2.cpp
example2_CPPFLAGS = $(PYTHON_CFLAGS)
example2_LDADD = $(PYTHON_LDFLAGS)

bin_PROGRAMS += example3
example3_SOURCES = example3.cpp
example3_CPPFLAGS = $(PYTHON_CFLAGS)
example3_LDADD = $(PYTHON_LDFLAGS)
